Fix spacing and fade of stage items (#804)

--- a/src/main/frontend/pipeline-console-view/pipeline-console/main/data-tree-view.scss
+++ b/src/main/frontend/pipeline-console-view/pipeline-console/main/data-tree-view.scss
@@ -62,6 +62,7 @@ $pgv-item-padding-inline: 0.7rem;
   display: flex;
   flex-direction: column;
   gap: 0.125rem;
+  margin: 0;
 }
 
 .pgv-tree-stage {
@@ -167,7 +168,7 @@ $pgv-item-padding-inline: 0.7rem;
   mask-image: linear-gradient(
     90deg,
     white calc(100% - 3rem),
-    transparent calc(100% - 1.5rem)
+    transparent calc(100% - 2rem)
   );
 
   &:visited,
